--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -9,3 +9,5 @@ parameters:
   treatPhpDocTypesAsCertain: false
   ignoreErrors:
     - '#Constant EMILIA_COMMENT_HACKS_PATH not found.#'
+    - '#Call to an undefined method EmiliaProjects\\WP\\Comment\\Inc\\Progress_Planner\\[a-zA-Z0-9_\\\:\(\)].#'
+    - '#Call to method [a-zA-Z0-9_\\\]+() on an unknown class Progress_Planner\\[a-zA-Z0-9_\\].#'
