--- a/.phpcs.xml.dist
+++ b/.phpcs.xml.dist
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 <ruleset xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	name="Comment Hacks"
+	name="Comment Experience"
 	xsi:noNamespaceSchemaLocation="./vendor/squizlabs/php_codesniffer/phpcs.xsd">
 
-	<description>Comment Hacks rules for PHP_CodeSniffer</description>
+	<description>Comment Experience rules for PHP_CodeSniffer</description>
 
 	<!--
 	#############################################################################
