--- a/composer.json
+++ b/composer.json
@@ -27,15 +27,19 @@
 		"composer/installers": "^1.12.0"
 	},
 	"require-dev": {
-		"yoast/yoastcs": "^3.1",
-		"yoast/wp-test-utils": "^1.1.1",
-		"phpstan/phpstan": "^1.10",
-		"szepeviktor/phpstan-wordpress": "^1.3",
-		"phpstan/extension-installer": "^1.3"
+		"wp-coding-standards/wpcs": "^3.1",
+		"phpcompatibility/phpcompatibility-wp": "*",
+		"php-parallel-lint/php-parallel-lint": "^1.3",
+		"yoast/wp-test-utils": "^1.2",
+		"phpstan/phpstan": "^2.0",
+		"szepeviktor/phpstan-wordpress": "^2.0",
+		"phpstan/extension-installer": "^1.4",
+		"yoast/yoastcs": "^3.0",
+		"friendsofphp/php-cs-fixer": "^3.75"
 	},
 	"config": {
 		"platform": {
-			"php": "8.2"
+			"php": "8.3"
 		},
 		"allow-plugins": {
 			"composer/installers": true,
@@ -51,24 +55,25 @@
 		]
 	},
 	"scripts": {
+		"check-cs": [
+			"@php ./vendor/bin/phpcs -s"
+		],
+		"fix-cs": [
+			"PHP_CS_FIXER_IGNORE_ENV=1",
+			"@php ./vendor/bin/phpcbf",
+			"@php ./vendor/bin/php-cs-fixer fix . --allow-risky=yes"
+		],
 		"lint": [
 			"@php ./vendor/php-parallel-lint/php-parallel-lint/parallel-lint . -e php --show-deprecated --exclude vendor --exclude node_modules --exclude .git"
 		],
-		"config-yoastcs" : [
-			"Dealerdirect\\Composer\\Plugin\\Installers\\PHPCodeSniffer\\Plugin::run",
-			"@php ./vendor/squizlabs/php_codesniffer/bin/phpcs --config-set default_standard Yoast"
-		],
-		"check-cs": [
-			"@php ./vendor/squizlabs/php_codesniffer/bin/phpcs --runtime-set testVersion 8.2-"
-		],
-		"fix-cs": [
-			"@php ./vendor/squizlabs/php_codesniffer/bin/phpcbf"
+		"lint-blueprint": [
+			"@php -r \"exit( intval( is_null( json_decode( file_get_contents( './.wordpress-org/blueprints/blueprint.json' ) ) ) ) );\""
 		],
 		"test": [
-			"@php ./vendor/phpunit/phpunit/phpunit"
+			"@php ./vendor/phpunit/phpunit/phpunit --dont-report-useless-tests"
 		],
 		"phpstan": [
-			"@php ./vendor/bin/phpstan analyse --memory-limit=2048M ."
+			"@php ./vendor/bin/phpstan analyse --memory-limit=2048M"
 		]
 	}
 }
