--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           generate-zip: true
         env:
-          SLUG: yoast-comment-hacks
+          SLUG: ${{ secrets.DOT_ORG_SLUG }}
           SVN_PASSWORD: ${{ secrets.SVN_PASSWORD }}
           SVN_USERNAME: ${{ secrets.SVN_USERNAME }}
       # After the deploy, we also want to create a zip and upload it to the release on Github. We don't want
