--- a/.github/workflows/playground.yml
+++ b/.github/workflows/playground.yml
@@ -56,14 +56,14 @@ jobs:
         id: blueprint
         run: |
           set -euxo pipefail
-          ARTIFACT_URL="https://nightly.link/${{ github.repository }}/actions/runs/${{ github.run_id }}/${{ github.event.repository.name }}.zip"
+          ARTIFACT_URL="https://nightly.link/${{ github.repository }}/actions/runs/${{ github.run_id }}/${{ secrets.DOT_ORG_SLUG }}.zip"
 
           # Use Node.js to parse, modify, and stringify the JSON
           BLUEPRINT=$(node -e "
             const fs = require('fs');
             const blueprint = JSON.parse(fs.readFileSync('.wordpress-org/blueprints/playground.json', 'utf8'));
             blueprint.plugins = blueprint.plugins.map(plugin =>
-              plugin === '${{ github.event.repository.name }}' ? '$ARTIFACT_URL' : plugin
+              plugin === '${{ secrets.DOT_ORG_SLUG }}' ? '$ARTIFACT_URL' : plugin
             );
             console.log(JSON.stringify(blueprint));
           ")
@@ -78,7 +78,7 @@ jobs:
       - name: Upload plugin artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ github.event.repository.name }}
+          name: ${{ secrets.DOT_ORG_SLUG }}
           path: ${{ steps.prep.outputs.PKG_DIR }}
           # Optional: faster uploads for already-compressed assets
           compression-level: 0
@@ -89,4 +89,4 @@ jobs:
           message: |
             **Test on Playground**
             [Test this pull request on the Playground](https://playground.wordpress.net/#${{ steps.blueprint.outputs.blueprint }})
-            or [download the zip](https://nightly.link/${{ github.repository }}/actions/runs/${{ github.run_id }}/${{ github.event.repository.name }}.zip)
+            or [download the zip](https://nightly.link/${{ github.repository }}/actions/runs/${{ github.run_id }}/${{ secrets.DOT_ORG_SLUG }}.zip)
