Implement plugin check action

--- a/.distignore
+++ b/.distignore
@@ -1,26 +1,23 @@
-/.wordpress-org
+/.cache
 /.git
 /.github
-/.cache
+/.wordpress-org
 /node_modules
 /tests
-
-.phpcs.xml.dist
+/vendor
 .distignore
-.gitignore
-.removeable-files
-package.json
-phpmd.xml
-phpunit.xml.dist
-yarn.lock
 .eslintignore
 .eslintrc
 .gitattributes
-package.json
-phpmd.xml
-phpunit.xml.dist
-readme.md
-admin/assets/js/.jshintrc
+.gitignore
+.php-cs-fixer.dist.php
+.phpcs.xml.dist
 composer.json
 composer.lock
-Security.md
+package.json
+phpcs.xml.dist
+phpstan.neon.dist
+phpunit.xml.dist
+README.md
+admin/assets/js/.jshintrc
+SECURITY.md
