--- a/.gitattributes
+++ b/.gitattributes
@@ -5,25 +5,28 @@
 # https://www.reddit.com/r/PHP/comments/2jzp6k/i_dont_need_your_tests_in_my_production
 # https://blog.madewithlove.be/post/gitattributes/
 #
+/.cache export-ignore
+/.github export-ignore
+/.wordpress-org export-ignore
+/node-modules export-ignore
+/tests export-ignore
+/vendor export-ignore
+.distignore export-ignore
 .eslintignore export-ignore
 .eslintrc export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
 .phpcs.xml.dist export-ignore
-.removeable-files export-ignore
-package.json export-ignore
-phpmd.xml export-ignore
-phpunit.xml.dist export-ignore
-readme.md export-ignore
-/.cache export-ignore
-/.github export-ignore
-/.wordpress-org export-ignore
-/tests export-ignore
-admin/assets/js/.jshintrc export-ignore
-.distignore export-ignore
+.php-cs-fixer.dist.php export-ignore
 composer.json export-ignore
 composer.lock export-ignore
-Security.md export-ignore
+package.json export-ignore
+phpcs.xml.dist export-ignore
+phpstan.neon.dist export-ignore
+phpunit.xml.dist export-ignore
+README.md export-ignore
+admin/assets/js/.jshintrc export-ignore
+SECURITY.md export-ignore
 
 #
 # Auto detect text files and perform LF normalization
